--- a/StartHere/src/main/resources/application.properties
+++ b/StartHere/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=${PORT:2019}
 # server.servlet.context-path=/apis
 
 # Which db to run
-# local.run.db=H2
-local.run.db=POSTGRESQL
+ local.run.db=H2
+#local.run.db=POSTGRESQL
 
 # Environment Variables Needed
 # MYDBHOST
